--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
             <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
           </a>
 
-          <a href="hhttps://snapchat.com/t/6KvKQM9C" target="_blank">
-            <div class="icon"><i class="fab fa-snapchat"></i></div>
+          <a href="https://x.com/zel_meo?s=21" target="_blank">
+            <div class="icon"><i class="uil uil-twitter-alt"></i></div>
           </a>
 
           <a href="https://www.tiktok.com/@_zel.meo?_t=ZM-8tJTlMcuBiH&_r=1" target="_blank">
